[tool.poetry]
name = "pizzas-fastapi"
version = "0.1.0"
description = ""
authors = ["pawelwisnia12 <47950295+pawelwisnia12@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
